dataset1235/2025-2/2947369575/users/3825365377/executions/1003782500_704983377.log
== SUBMISSION (2025-08-27 22:52:42)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input("valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p= y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:46:00)
-- CODE: 
x=int(input("Valor de x:"))
y= int(input("Valor de y:"))
print(x//y)
print(x%y)
print(x/y)
prit(x*y)
print(y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:44:45)
-- CODE: 
x=int(input("Valor de x:"))
y= int(input("valorde y:"))
print(x//y)
print(x%y)
print(x/y)
prit(x*y)
print(y**3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:46:47)
-- CODE: 
x= int(input("Valor de x:"))
y= int(input("Valor de y:"))
print(x//y)
print(x%y)
print(x/y)
prit(x*y)
print(y**3)
print(x-y)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:45:08)
-- CODE: 
x=int(input("Valor de x:"))
y= int(input("Valor de y:"))
print(x//y)
print(x%y)
print(x/y)
prit(x*y)
print(y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:50:09)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input("valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p=y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:53:40)
-- CODE: 
x= int(input("valor de x:"))
y= int(input("valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p= y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:53:42)
-- CODE: 
x= int(input("valor de x:"))
y= int(input("valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p= y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:39:31)
-- CODE: 
X= int(input("Insira um Numero:"))
Y= int(input("Insira um Numero:"))
print (int(x//y))
print (int(x%y))
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:34:22)
-- CODE: 
x= int(input("Insira um Numero:"))
y= int(input("Insira um Numero:"))
print(x//y)
print(x%y)
print(x/y)
prit(x*y)
print(y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:52:46)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input("valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p= y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:50:42)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input("valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p= y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:45:10)
-- CODE: 
x=int(input("Valor de x:"))
y= int(input("Valor de y:"))
print(x//y)
print(x%y)
print(x/y)
prit(x*y)
print(y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:52:45)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input("valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p= y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:52:39)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input("valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p= y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:49:13)
-- CODE: 
x= int(input("Valor de x:"))
y= int(input("Valor de y:"))
print(x//y)
print(x%y)
print(x/y)
prit(x*y)
print(y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:37:32)
-- CODE: 
X= int(input("Insira um Numero:"))
Y= int(input("Insira um Numero:"))
print (int(x//y))
print (int(x%y))
print (int(x/y))
print (int(x*y))
print (int(y**3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:17:44)
-- CODE: 
x= int(input("Valor de x:"))
y= int(input("Valor de y:"))
print(x//y)
print(x%y)
print(x/y)
prit(x*y)
print(y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:52:43)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input("valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p= y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:39:29)
-- CODE: 
X= int(input("Insira um Numero:"))
Y= int(input("Insira um Numero:"))
print (int(x//y))
print (int(x%y))
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (int(x//y))
               ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:45:59)
-- CODE: 
x=int(input("Valor de x:"))
y= int(input("Valor de y:"))
print(x//y)
print(x%y)
print(x/y)
prit(x*y)
print(y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:34:21)
-- CODE: 
x= int(input("Insira um Numero:"))
y= int(input("Insira um Numero:"))
print(x//y)
print(x%y)
print(x/y)
prit(x*y)
print(y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:49:52)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input(" valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p=y**3


print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:36:35)
-- CODE: 
x= int(input("Insira um Numero:"))
y= int(input("Insira um Numero:"))
print (int(x//y))
print (int(x%y))
print (int(x/y))
print (int(x*y))
print (int(y**3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:50:20)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input("valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p= y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:41:50)
-- CODE: 
X= int(input("Entre com valor de x:"))
Y= int(input("Entre com valor de y:"))
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (x//y)
           ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (x//y)
           ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (x//y)
           ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (x//y)
           ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (x//y)
           ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (x//y)
           ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:44:38)
-- CODE: 
x=int(input("Valor de x:"))
y= int(input("valorde y:"))
print(x//y)
print(x%y)
print(x/y)
prit(x*y)
print(y**3)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:50:39)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input("valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p= y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:50:00)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input(" valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p=y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:41:51)
-- CODE: 
X= int(input("Entre com valor de x:"))
Y= int(input("Entre com valor de y:"))
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (x//y)
           ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (x//y)
           ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (x//y)
           ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (x//y)
           ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (x//y)
           ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (x//y)
           ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:52:40)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input("valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p= y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:49:52)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input(" valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p=y**3


print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:50:20)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input("valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p= y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:36:34)
-- CODE: 
x= int(input("Insira um Numero:"))
y= int(input("Insira um Numero:"))
print (int(x//y))
print (int(x%y))
print (int(x/y))
print (int(x*y))
print (int(y**3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
---- user output:
8
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
---- user output:
125
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
---- user output:
125
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
---- user output:
8
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
---- user output:
8
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 23:49:22)
-- CODE: 
x= int(input("Valor de x:"))
y= int(input("Valor de y:"))
print(x//y)
print(x%y)
print(x/y)
prit(x*y)
print(y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    prit(x*y)
    ^^^^
NameError: name 'prit' is not defined. Did you mean: 'print'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:50:44)
-- CODE: 
X= int(input("valor de x:"))
Y= int(input("valor de y:"))
di= x//y
rdi= x%y
dr= x/y
m= x*y
p= y**3
print (x//y)
print (x%y)
print (x/y)
print (x*y)
print (y**3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
14
2
---- correct output:
7
0
7.0
28
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 2:
---- input:
8
5
---- correct output:
1
3
1.6
40
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 3:
---- input:
10
5
---- correct output:
2
0
2.0
50
125
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 4:
---- input:
53
2
---- correct output:
26
1
26.5
106
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 5:
---- input:
346
2
---- correct output:
173
0
173.0
692
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
-- TEST CASE 6:
---- input:
347
2
---- correct output:
173
1
173.5
694
8
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    di= x//y
        ^
NameError: name 'x' is not defined. Did you mean: 'X'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
